# bevy_wry_webview

./: Cargo.toml  README.md
assets/: init.js  init_linux.js
examples/: cube.html  cube.rs  cube1.html  fullscreen.rs
src/: ipc.rs  lib.rs  reactivity.rs
