[package]
name = "bevy_wry_webview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
wry = { git = "https://github.com/tauri-apps/wry", default-features = false, features = ["file-drop", "objc-exception", "protocol", "transparent"] }
crossbeam = "0.7.3"
raw-window-handle = "0.5"
